CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN__c.object
<CustomObject>
    <fields>
        <fullName>Is_being_approved_by_Flow__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is being approved by Flow</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CA_Q1_22_County__c</fullName>
        <label>CA_Q1_22_County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountyWithoutOther</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_Q1_23_County__c</fullName>
        <label>CA_Q1_23_County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountyWithoutOther</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_Q1_24_County__c</fullName>
        <label>CA_Q1_24_County</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>CountyWithoutOther</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_Q1_32_N__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CA_Q1_32_N</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CA_Q1_33_N__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CA_Q1_33_N</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CA_Q1_34_N__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CA_Q1_34_N</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Bypass_Validation_On__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Bypass Validation On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CA_Q1_7_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CA_Q1_7_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Q2_15_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CA_Q2_15_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Q5_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CA_Q5_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CA_Q10__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CA_Q10</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CA_Q11__c</fullName>
        <label>CA_Q11</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00907</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_Q11_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CA_Q11_other</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CA_Q12__c</fullName>
        <label>CA_Q12</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00908</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CA_Q13_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CA_Q13_other</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CCCAP_Q3_new__c</fullName>
        <label>CCCAP_Q3_new</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00910</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>CCCAP_Q3_1_new__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CCCAP_Q3_1_new</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCCAP_Q3_2_new__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CCCAP_Q3_2_new</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCCAP_Q3_5_other_new__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CCCAP_Q3_5_other_new</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CCCAP_Q3_other_new__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>CCCAP_Q3_other_new</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>PF_Q1_1_other__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>PF_Q1_1_other</label>
        <length>2000</length>
        <type>LongTextArea</type>
    </fields>
    <label>County Plan</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>OBJECT_ID</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>CREATED_DATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <columns>CDE_COUNTY__c</columns>
        <columns>CCCAP_Q7__c</columns>
        <columns>CCCAP_Q7_1__c</columns>
        <columns>CCCAP_Q7_2__c</columns>
        <columns>CCCAP_Q10_1__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CDE_COUNTY__c</field>
            <operation>equals</operation>
            <value>arapahoe</value>
        </filters>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>Template_List_View</fullName>
        <columns>NAME</columns>
        <columns>STATUS__c</columns>
        <columns>DTE_BEGIN_EFFEV__c</columns>
        <columns>DTE_END_EFFEV__c</columns>
        <columns>CDE_COUNTY_PLAN_TEMPLT__c</columns>
        <columns>IND_COUNTY_PLAN_TEMPLT__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>IND_COUNTY_PLAN_TEMPLT__c</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <label>Template</label>
    </listViews>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>County Plan</pluralLabel>
    <sharingModel>Read</sharingModel>
    <!--Commented
    as part of CCCAP-10798-->
    <!--validationRules>
        <fullName>Approved_Plan_cannot_be_updated</fullName>
        <active>false</active>
        <description>Once the plan is in an Approved status, users should not be able to edit</description>
        <errorConditionFormula>OR(AND( NOT(ISCHANGED(CDE_STATUS__c)) ,NOT(ISNEW()),ISPICKVAL(CDE_STATUS__c,
    &apos;APV&apos;)),  TEXT(PRIORVALUE(CDE_STATUS__c)) = &apos;APV&apos; )</errorConditionFormula>
        <errorMessage>Approved Plan cannot be updated</errorMessage>
    </validationRules-->
    <validationRules>
        <fullName>Begin_Date_Future</fullName>
        <active>true</active>
        <errorConditionFormula>AND(
		ISBLANK(County_Plan__c ),
		DTE_BEGIN_EFFEV__c &lt;= TODAY(),
			!ISPICKVAL(CDE_STATUS__c ,&apos;APV&apos;),
		OR(
			!ISCHANGED( CDE_STATUS__c ),
			AND(
				ISCHANGED( CDE_STATUS__c ),
				!ISPICKVAL(CDE_STATUS__c ,&apos;NRV&apos;)
			)),		
		!ISCHANGED( OwnerId ),
		!Is_being_approved_by_Flow__c,
		!ISCHANGED(Bypass_Validation_On__c)
		)</errorConditionFormula>
        <errorDisplayField>DTE_BEGIN_EFFEV__c</errorDisplayField>
        <errorMessage>Begin Date Should Be a Future Date</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Template_Record</fullName>
        <active>true</active>
        <errorConditionFormula>AND( AND(
            ISBLANK(County_Plan__c ),
            $UserRole.DeveloperName &lt;&gt;
            &apos;Template_Administrator&apos;,$UserRole.DeveloperName &lt;&gt;
            &apos;County_Plan_Approver&apos;) , OR(IND_COUNTY_PLAN_TEMPLT__c,
            PRIORVALUE(IND_COUNTY_PLAN_TEMPLT__c)))</errorConditionFormula>
        <errorMessage>Template Records can be modified/checked by Template Administrators only</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Enrolment_Freeze</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISBLANK(County_Plan__c ),$Label.RestrictWaitlistEnrolmentFreeze
            ==&apos;true&apos;,TEXT(ELIGIBILITY_Q9__c)==&apos;Y&apos; , DTE_BEGIN_EFFEV__c &lt;
            DATEVALUE(&quot;2019-07-01&quot;), TEXT(CDE_STATUS__c) &lt;&gt; &apos;APV&apos;)</errorConditionFormula>
        <errorDisplayField>ELIGIBILITY_Q9__c</errorDisplayField>
        <errorMessage>Is not applicable until 7/1/2019 You must select “No”.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Restrict_Waitlist</fullName>
        <active>true</active>
        <errorConditionFormula>AND( ISBLANK(County_Plan__c ),$Label.RestrictWaitlistEnrolmentFreeze
            ==&apos;true&apos;,TEXT(ELIGIBILITY_Q10__c)==&apos;Y&apos;, DTE_BEGIN_EFFEV__c &lt;
            DATEVALUE(&quot;2019-07-01&quot;) , TEXT(CDE_STATUS__c) &lt;&gt; &apos;APV&apos;)</errorConditionFormula>
        <errorDisplayField>ELIGIBILITY_Q10__c</errorDisplayField>
        <errorMessage>Is not applicable until 7/1/2019 You must select “No”.</errorMessage>
    </validationRules>
</CustomObject>