CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN__c/fields/ELIGIBILITY_Q9_4_Old__c.field-meta.xml
<CustomField>
    <fullName>ELIGIBILITY_Q9_4_Old__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>ELIGIBILITY_Q9_4_Old</label>
    <length>255</length>
    <type>Text</type>
</CustomField>