CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN__c/validationRules/Begin_Date_Future.validationRule-meta.xml
<ValidationRule>
    <fullName>Begin_Date_Future</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
		ISBLANK(County_Plan__c ),
		DTE_BEGIN_EFFEV__c &lt;= TODAY(),
			!ISPICKVAL(CDE_STATUS__c ,&apos;APV&apos;),
		OR(
			!ISCHANGED( CDE_STATUS__c ),
			AND(
				ISCHANGED( CDE_STATUS__c ),
				!ISPICKVAL(CDE_STATUS__c ,&apos;NRV&apos;)
			)),		
		!ISCHANGED( OwnerId ),
		!Is_being_approved_by_Flow__c,
		!ISCHANGED(Bypass_Validation_On__c)
		)</errorConditionFormula>
    <errorDisplayField>DTE_BEGIN_EFFEV__c</errorDisplayField>
    <errorMessage>Begin Date Should Be a Future Date</errorMessage>
</ValidationRule>