CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN__c/validationRules/Restrict_Waitlist.validationRule-meta.xml
<ValidationRule>
    <fullName>Restrict_Waitlist</fullName>
    <active>true</active>
    <errorConditionFormula>AND( ISBLANK(County_Plan__c ),$Label.RestrictWaitlistEnrolmentFreeze
            ==&apos;true&apos;,TEXT(ELIGIBILITY_Q10__c)==&apos;Y&apos;, DTE_BEGIN_EFFEV__c &lt;
            DATEVALUE(&quot;2019-07-01&quot;) , TEXT(CDE_STATUS__c) &lt;&gt; &apos;APV&apos;)</errorConditionFormula>
    <errorDisplayField>ELIGIBILITY_Q10__c</errorDisplayField>
    <errorMessage>Is not applicable until 7/1/2019 You must select “No”.</errorMessage>
</ValidationRule>