CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN__c/validationRules/Template_Record.validationRule-meta.xml
<ValidationRule>
    <fullName>Template_Record</fullName>
    <active>true</active>
    <errorConditionFormula>AND( AND(
            ISBLANK(County_Plan__c ),
            $UserRole.DeveloperName &lt;&gt;
            &apos;Template_Administrator&apos;,$UserRole.DeveloperName &lt;&gt;
            &apos;County_Plan_Approver&apos;) , OR(IND_COUNTY_PLAN_TEMPLT__c,
            PRIORVALUE(IND_COUNTY_PLAN_TEMPLT__c)))</errorConditionFormula>
    <errorMessage>Template Records can be modified/checked by Template Administrators only</errorMessage>
</ValidationRule>