CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>OBJECT_ID</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>UPDATEDBY_USER</columns>
    <columns>LAST_UPDATE</columns>
    <columns>CDE_COUNTY__c</columns>
    <columns>CCCAP_Q7__c</columns>
    <columns>CCCAP_Q7_1__c</columns>
    <columns>CCCAP_Q7_2__c</columns>
    <columns>CCCAP_Q10_1__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Status__c</field>
        <operation>equals</operation>
        <value>Draft</value>
    </filters>
    <label>All</label>
</ListView>