CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN__c/listViews/CHATS_State_Users_T_COUNTY_PLAN.listView-meta.xml
<ListView>
    <fullName>CHATS_State_Users_T_COUNTY_PLAN</fullName>
    <columns>NAME</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>CDE_COUNTY__c</field>
        <operation>equals</operation>
        <value>bent county</value>
    </filters>
    <label>CHATS State Users</label>
    <queue>CHATS_State_Users</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>