CHATS_SIT/force-app/main/default/objects/T_COUNTY_PLAN__c/listViews/Datafix_View.listView-meta.xml
<ListView>
    <fullName>Datafix_View</fullName>
    <columns>NAME</columns>
    <columns>CDE_COUNTY__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>DTE_BEGIN_EFFEV__c</columns>
    <columns>DTE_END_EFFEV__c</columns>
    <columns>ELIGIBILITY_Q1_1__c</columns>
    <columns>CDE_STATUS__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>DTE_END_EFFEV__c</field>
        <operation>equals</operation>
    </filters>
    <filters>
        <field>IND_COUNTY_PLAN_TEMPLT__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <filters>
        <field>CDE_COUNTY__c</field>
        <operation>equals</operation>
    </filters>
    <label>Datafix View</label>
</ListView>